refactor: Format Java code
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.format.AutoFormat?organizationId=RGVmYXVsdA%3D%3D

Co-authored-by: Moderne <team@moderne.io>